--- a/package.json
+++ b/package.json
@@ -1,39 +1,31 @@
 {
-  "name": "quiz",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^5.1.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
-  },
+  "name": "serve-node",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app/app.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "babel-core": "6.26.3",
+    "babel-preset-es2015": "6.24.1",
+    "babel-register": "6.26.0",
+    "body-parser": "^1.18.3",
+    "bluebird": "3.5.5",
+    "cors": "^2.8.5",
+    "express": "4.18.1",
+    "lodash": "^4.17.11",
+    "moment": "2.24.0",
+    "mongodb": "4.6.0",
+    "mongoose": "6.3.5",
+    "mongoose-unique-validator": "2.0.3",
+    "morgan": "^1.9.1",
+    "jsonwebtoken": "8.5.1",
+    "sha1": "1.1.1"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
